Color fixes: stats, tooltip section borders, organiser dropdown

--- a/src/app/_variables.scss
+++ b/src/app/_variables.scss
@@ -4,7 +4,8 @@
 $dim-brand: #e8a534;
 $red: #ff3232; // For warnings/errors
 $green: #51a351; // For success statuses or positive deltas
-$statDelta: #68a0b7; // For highlighting the difference in modded item stats
+$stat-modded: #68a0b7; // For highlighting the difference in modded item stats
+$stat-masterworked: #e8a534;
 
 // Blue used to denote community-provided data
 $communityBlue: #0d7fad;
