--- a/src/app/organizer/DropDown.m.scss
+++ b/src/app/organizer/DropDown.m.scss
@@ -50,11 +50,9 @@ $dropdown-menu: 10;
   padding: 8px 12px;
   text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.25);
 
-  &:hover {
-    background-color: #151515;
-  }
-
+  &:hover,
   &:active {
+    color: #000;
     box-shadow: none;
     background-color: var(--theme-accent-primary);
   }
