--- a/src/app/dim-ui/PressTip.m.scss
+++ b/src/app/dim-ui/PressTip.m.scss
@@ -159,7 +159,7 @@ $horizontal-padding: 11px;
   .section:not(:empty) {
     margin: 8px #{-$horizontal-padding} -8px #{-$horizontal-padding};
     padding: 5px $horizontal-padding 7px $horizontal-padding;
-    border-top: 1px solid var(--theme-tooltip-border);
+    border-top: 1px solid rgba(255, 255, 255, 0.2);
 
     > :first-child {
       margin-top: 0;
