--- a/src/app/dim-ui/_tooltip-mixins.scss
+++ b/src/app/dim-ui/_tooltip-mixins.scss
@@ -19,6 +19,6 @@
   &:not(:empty) {
     color: color.mix(white, $color, 80%);
     background-color: rgba($color, 0.175);
-    border-top-color: rgba($color, 0.5);
+    border-top-color: transparent;
   }
 }
