--- a/src/app/records/PresentationNode.m.scss
+++ b/src/app/records/PresentationNode.m.scss
@@ -1,3 +1,5 @@
+@use '../variables.scss' as *;
+
 .onlyChild {
   margin-left: 0 !important;
 }
@@ -35,6 +37,6 @@
   height: 100%;
 
   :global(.title.completed) & {
-    background: #f5dc56;
+    background: $gold;
   }
 }
