--- a/src/app/records/PresentationNode.scss
+++ b/src/app/records/PresentationNode.scss
@@ -18,7 +18,7 @@
 
       /* styling for completed triumph categories */
       .completed {
-        color: #f5dc56;
+        color: $gold;
         background-color: rgba(245, 220, 86, 0.1);
         opacity: 0.7;
         &.hide-complete {
