Size and space out selected mods in LO picker

--- a/src/app/dim-ui/SheetHorizontalScrollContainer.m.scss
+++ b/src/app/dim-ui/SheetHorizontalScrollContainer.m.scss
@@ -1,7 +1,7 @@
 .horizontalScrollContainer {
   flex: 1;
   white-space: nowrap;
-  overflow-x: scroll;
+  overflow-x: auto;
   overflow-y: hidden;
   display: flex;
   flex-direction: row;
