--- a/src/app/loadout-builder/filter/LockArmorAndPerks.m.scss
+++ b/src/app/loadout-builder/filter/LockArmorAndPerks.m.scss
@@ -4,8 +4,8 @@
   display: grid;
   grid-template-columns: repeat(auto-fill, var(--item-size));
   grid-template-rows: repeat(auto-fill, minmax(var(--item-size), 1fr));
-  justify-content: space-around;
   margin-bottom: 3px;
+  gap: 4px;
 
   :global(.item-drag-container) {
     margin: 0;
