--- a/src/app/store-stats/ClarityCharacterStat.m.scss
+++ b/src/app/store-stats/ClarityCharacterStat.m.scss
@@ -33,6 +33,10 @@
     text-align: right;
     padding-right: 6px;
     opacity: 1;
+
+    > * {
+      white-space: nowrap;
+    }
   }
 
   /* stylelint-disable-next-line no-descending-specificity */
@@ -55,5 +59,10 @@
 
 .unit {
   font-weight: normal !important;
+  font-size: 0.85em;
+}
+
+.override {
+  display: inline-block;
   font-size: 0.85em;
 }
