--- a/src/app/search/SearchBar.m.scss
+++ b/src/app/search/SearchBar.m.scss
@@ -57,6 +57,10 @@
   padding: 6px 9px 6px 9px;
   gap: 6px;
 
+  &:hover {
+    cursor: pointer;
+  }
+
   @include phone-portrait {
     padding: 10px 10px 10px 9px;
   }
@@ -187,7 +191,7 @@
   > :global(.app-icon),
   > button > :global(.app-icon) {
     font-size: 14px !important;
-    color: #999 !important;
+    color: #999;
     // Increase touch target size
     padding: 4px;
     margin: -4px;
@@ -195,12 +199,15 @@
     &:first-child {
       margin-left: -4px;
     }
-    &:hover {
-      color: #e8a534 !important;
-    }
     :global(.mobile-search-link) & {
       font-size: 18px !important;
     }
+  }
+
+  &:hover > span,
+  &:hover > :global(.app-icon),
+  &:hover button > :global(.app-icon) {
+    color: var(--theme-accent-primary);
   }
 
   > span,
