Theme prep: Text colour variables

--- a/src/app/_theme.scss
+++ b/src/app/_theme.scss
@@ -8,6 +8,10 @@
   --theme-fill-modal: #000; // Base fill for popups, drawers, dropdowns etc
   --theme-fill-modal-actions: #161616; // Layered/contextual modals (search, item actions)
 
+  // Text
+  --theme-text: #fff;
+  --theme-text-invert: #000;
+
   // Buttons
   --theme-button-bg: rgba(255, 255, 255, 0.2);
 
