--- a/src/app/inventory/PullFromPostmaster.m.scss
+++ b/src/app/inventory/PullFromPostmaster.m.scss
@@ -5,7 +5,7 @@
   border-radius: 10px;
   background: var(--theme-accent-primary);
   padding: 0 4px;
-  color: black;
+  color: var(--theme-text-invert);
   font-size: 9px;
   transition: all 150ms ease-out;
 }
