--- a/src/app/loadout-drawer/LoadoutDrawerHeader.m.scss
+++ b/src/app/loadout-drawer/LoadoutDrawerHeader.m.scss
@@ -19,7 +19,7 @@
   background: var(--theme-input-bg);
   border: none;
   border-bottom: 1px solid #555;
-  color: white;
+  color: var(--theme-text);
   width: 100%;
   font-size: 18px;
 
