--- a/src/app/notifications/NotificationButton.m.scss
+++ b/src/app/notifications/NotificationButton.m.scss
@@ -5,7 +5,7 @@
   padding: 6px;
   border-radius: 4px;
   text-align: center;
-  color: white;
+  color: var(--theme-text);
   background-color: #222;
   display: block;
   width: 30%;
