--- a/src/app/organizer/ItemTypeSelector.m.scss
+++ b/src/app/organizer/ItemTypeSelector.m.scss
@@ -27,7 +27,7 @@
   &:active,
   &.checked {
     background-color: var(--theme-accent-primary);
-    color: black;
+    color: var(--theme-text-invert);
     > img {
       filter: none !important;
     }
