--- a/src/app/whats-new/BungieAlerts.m.scss
+++ b/src/app/whats-new/BungieAlerts.m.scss
@@ -4,7 +4,7 @@
   margin: 1em 0;
   padding: 1em;
   a {
-    color: white;
+    color: var(--theme-text);
   }
   h2 {
     margin: 0 0 8px 0 !important;
