--- a/src/app/accounts/MenuAccounts.m.scss
+++ b/src/app/accounts/MenuAccounts.m.scss
@@ -1,7 +1,7 @@
 @use '../variables.scss' as *;
 
 .accountSelect {
-  color: white;
+  color: var(--theme-text);
   height: auto;
   flex: 1 0 auto;
   display: flex;
@@ -17,7 +17,7 @@
 
       &:hover,
       &:focus {
-        color: black;
+        color: var(--theme-text-invert);
         background-color: var(--theme-accent-primary);
       }
     }
