--- a/src/app/dim-ui/CollapsibleTitle.scss
+++ b/src/app/dim-ui/CollapsibleTitle.scss
@@ -3,7 +3,7 @@
 .title {
   padding: 0 16px;
   background-color: rgba(0, 0, 0, 0.2);
-  color: white;
+  color: var(--theme-text);
   min-height: 34px;
   text-transform: uppercase;
   letter-spacing: 2px;
@@ -24,7 +24,7 @@
     &:hover,
     &.collapsed {
       background-color: transparent;
-      color: white;
+      color: var(--theme-text);
     }
   }
 
