--- a/src/app/dim-ui/ConfirmButton.m.scss
+++ b/src/app/dim-ui/ConfirmButton.m.scss
@@ -24,7 +24,7 @@
     & > div {
       transition: height 0.1s;
     }
-    color: white !important;
+    color: var(--theme-text) !important;
 
     &:hover {
       background-color: #af7d27 !important;
