--- a/src/app/dim-ui/Select.m.scss
+++ b/src/app/dim-ui/Select.m.scss
@@ -9,7 +9,7 @@
 
 .menu {
   background: var(--theme-dropdown-menu-bg);
-  color: white;
+  color: var(--theme-text);
   font-size: 12px;
   z-index: 100;
   position: absolute;
@@ -31,7 +31,7 @@
   }
 
   :global(.app-icon) {
-    color: white !important;
+    color: var(--theme-text) !important;
     width: 16px;
     text-align: center;
     margin-right: 4px;
@@ -42,9 +42,15 @@
 
 .highlighted {
   background-color: var(--theme-accent-primary);
-  color: #000;
-  :global(.app-icon) {
-    color: black !important;
+  color: var(--theme-text-invert);
+  cursor: pointer;
+  & :global(.app-icon) {
+    color: var(--theme-text-inverted) !important;
+  }
+  // Maintain legibility of keyHelp
+  & span {
+    color: var(--theme-text-invert);
+    border-color: var(--theme-text-invert);
   }
 }
 
