--- a/src/app/dim-ui/useDialog.m.scss
+++ b/src/app/dim-ui/useDialog.m.scss
@@ -3,7 +3,7 @@
 .dialog {
   position: fixed;
   background-color: #08080f;
-  color: white;
+  color: var(--theme-text);
   top: 0;
   top: env(safe-area-inset-top, 0);
   margin-top: 0;
