--- a/src/app/item-feed/ItemFeedSidebar.m.scss
+++ b/src/app/item-feed/ItemFeedSidebar.m.scss
@@ -36,7 +36,7 @@
   background: black;
   position: absolute;
   right: 100%;
-  color: white;
+  color: var(--theme-text);
   padding: 8px;
   top: -25px;
   transform-origin: bottom right;
@@ -44,7 +44,7 @@
   font-size: 16px;
 
   &:hover {
-    color: black;
+    color: var(--theme-text-invert);
     background-color: var(--theme-accent-primary);
   }
 
