--- a/src/app/item-popup/ItemObjectives.scss
+++ b/src/app/item-popup/ItemObjectives.scss
@@ -53,7 +53,7 @@
   display: flex;
   flex-direction: row;
   align-items: center;
-  color: white;
+  color: var(--theme-text);
 }
 
 .objective-integer {
@@ -62,7 +62,7 @@
   display: flex;
   flex-direction: row;
   align-items: center;
-  color: white;
+  color: var(--theme-text);
   img {
     width: 16px;
     height: 16px;
