--- a/src/app/item-popup/ItemSocketsWeapons.m.scss
+++ b/src/app/item-popup/ItemSocketsWeapons.m.scss
@@ -44,12 +44,12 @@
   height: 24px;
   z-index: 1;
   background-color: rgba(255, 255, 255, 0.2);
-  color: white;
+  color: var(--theme-text);
   text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.25);
   &:hover,
   &:active {
     background-color: var(--theme-accent-primary) !important;
-    color: black !important;
+    color: var(--theme-text-invert) !important;
   }
 }
 
