--- a/src/app/loadout/ingame/EditInGameLoadout.m.scss
+++ b/src/app/loadout/ingame/EditInGameLoadout.m.scss
@@ -34,7 +34,7 @@
   &:active,
   &.checked {
     background-color: var(--theme-accent-primary);
-    color: black;
+    color: var(--theme-text-invert);
     > img {
       filter: none !important;
     }
@@ -46,7 +46,7 @@
     &:hover,
     &:active,
     &.checked {
-      color: white !important;
+      color: var(--theme-text) !important;
     }
   }
 }
