--- a/src/app/loadout/loadout-menu/LoadoutPopup.m.scss
+++ b/src/app/loadout/loadout-menu/LoadoutPopup.m.scss
@@ -91,7 +91,7 @@
 
   input[type='text'] {
     border: none;
-    color: white;
+    color: var(--theme-text);
     outline: none;
     flex: 1;
     width: 0;
@@ -106,12 +106,16 @@
   &:hover,
   a:hover {
     background-color: var(--theme-accent-primary);
-    color: black !important;
+    color: var(--theme-text-invert) !important;
     > span:first-child > :global(.app-icon) {
-      color: black !important;
+      color: var(--theme-text-invert) !important;
     }
     > span:first-child > img:first-child {
       filter: none;
+    }
+
+    .note {
+      color: var(--theme-text-invert);
     }
   }
 
@@ -167,7 +171,7 @@
   &:hover,
   a:hover {
     background-color: black;
-    color: white !important;
+    color: var(--theme-text) !important;
     cursor: default;
   }
 }
