--- a/src/app/login/Login.m.scss
+++ b/src/app/login/Login.m.scss
@@ -5,7 +5,7 @@
   flex-direction: column;
   align-items: stretch;
   background-color: rgba(0, 0, 0, 0.6);
-  color: white;
+  color: var(--theme-text);
   max-width: 800px;
   border-top: 5px solid #888;
   box-shadow: 0 0 2px rgba(0, 0, 0, 0.5);
@@ -68,7 +68,7 @@
     text-transform: none !important;
   }
   a {
-    color: white;
+    color: var(--theme-text);
     font-size: 12px;
   }
   button {
@@ -84,7 +84,7 @@
   text-align: center;
   padding: 1em 3em;
   background-color: var(--theme-accent-primary);
-  color: black;
+  color: var(--theme-text-invert);
   text-shadow: none;
   &:hover {
     transform: scale(1.05);
