--- a/src/app/main.scss
+++ b/src/app/main.scss
@@ -171,7 +171,7 @@ body {
 body {
   margin: 0 auto;
   background-color: #313233;
-  color: white;
+  color: var(--theme-text);
   font-family: 'Open Sans', sans-serif, 'Destiny Symbols';
   font-size: 12px;
   line-height: calc(16 / 12);
@@ -216,7 +216,7 @@ textarea {
   padding: 4px 8px;
   border: none;
   outline: none;
-  color: white;
+  color: var(--theme-text);
   box-sizing: border-box;
   font-family: monospace, 'Destiny Symbols';
   font-size: inherit;
@@ -237,7 +237,7 @@ select {
   height: 27px;
   font-size: 12px;
   line-height: calc(16 / 12);
-  color: white;
+  color: var(--theme-text);
   text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.25);
   border: 1px solid transparent;
 
@@ -251,7 +251,7 @@ select {
   &:hover,
   &:active {
     background-color: var(--theme-accent-primary);
-    color: black;
+    color: var(--theme-text-invert);
     background-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"><path fill="black" d="M207.029 381.476L12.686 187.132c-9.373-9.373-9.373-24.569 0-33.941l22.667-22.667c9.357-9.357 24.522-9.375 33.901-.04L224 284.505l154.745-154.021c9.379-9.335 24.544-9.317 33.901.04l22.667 22.667c9.373 9.373 9.373 24.569 0 33.941L240.971 381.476c-9.373 9.372-24.569 9.372-33.942 0z"></path></svg>');
   }
   // Set focus styles
@@ -266,7 +266,7 @@ select {
 
   option {
     background: black;
-    color: white;
+    color: var(--theme-text);
   }
 }
 
