--- a/src/app/notifications/Notification.m.scss
+++ b/src/app/notifications/Notification.m.scss
@@ -11,7 +11,7 @@
 }
 
 .inner {
-  color: white;
+  color: var(--theme-text);
   box-sizing: border-box;
   border-top: 4px solid black;
   pointer-events: all;
