--- a/src/app/search/SearchHistory.m.scss
+++ b/src/app/search/SearchHistory.m.scss
@@ -27,7 +27,7 @@
 .iconButton {
   composes: resetButton from '../dim-ui/common.m.scss';
   margin-left: 6px;
-  color: white;
+  color: red;
   padding: 0 2px;
 }
 
