--- a/src/app/storage/LocalStorageInfo.m.scss
+++ b/src/app/storage/LocalStorageInfo.m.scss
@@ -1,7 +1,7 @@
 @use '../variables.scss' as *;
 
 .warningBlock {
-  color: white;
+  color: var(--theme-text);
   background: $red;
   padding: 0.5em 1em;
   display: inline-block;
@@ -15,7 +15,7 @@
   display: flex;
   flex-direction: row;
   align-items: center;
-  color: white;
+  color: var(--theme-text);
   div {
     background-color: $green;
     position: absolute;
