--- a/src/app/item-popup/ItemPerksList.m.scss
+++ b/src/app/item-popup/ItemPerksList.m.scss
@@ -12,6 +12,10 @@
   padding: 4px 8px;
   flex-wrap: wrap;
 
+  &:hover {
+    background-color: rgba(255, 255, 255, 0.05);
+  }
+
   &:first-child {
     padding-right: 50px;
   }
