--- a/src/app/store-stats/ClarityCharacterStat.m.scss
+++ b/src/app/store-stats/ClarityCharacterStat.m.scss
@@ -59,11 +59,11 @@
 
 .unit {
   font-weight: normal !important;
-  font-size: 0.85em;
-  line-height: 1em;
+  line-height: 12px;
+  font-size: 11px;
 }
 
 .override {
-  display: inline-block;
-  font-size: 0.85em;
+  display: block;
+  font-size: 11px;
 }
