Fix some style regressions
Fixes #9502

--- a/src/app/dim-ui/CollapsibleTitle.scss
+++ b/src/app/dim-ui/CollapsibleTitle.scss
@@ -23,8 +23,11 @@
   @include phone-portrait {
     &:hover,
     &.collapsed {
-      background-color: transparent;
       color: var(--theme-text);
+    }
+
+    &:hover {
+      background-color: transparent;
     }
   }
 
