--- a/src/app/compare/CompareItem.m.scss
+++ b/src/app/compare/CompareItem.m.scss
@@ -8,9 +8,11 @@
   // Make sure even if there are no stats that there's enough room to not clip
   // the icon (e.g. for ghosts)
   min-height: calc(var(--item-size) + 60px);
+  padding-bottom: 8px;
 
   > * {
     padding-left: 4px;
+    padding-right: 4px;
   }
 
   // TODO push these into sockets component?
