Allow DIM title bar to overlay app title bar

--- a/src/app/_variables.scss
+++ b/src/app/_variables.scss
@@ -69,6 +69,7 @@ $theme-tooltip-corner-radius: 6px;
 
 // Search
 $theme-corner-radius-search: 4px;
+$search-bar-height: 28px;
 
 // A mixin that allows targeting styles only when in phone-portrait display mode
 @mixin phone-portrait {
