--- a/src/app/search/SearchBar.m.scss
+++ b/src/app/search/SearchBar.m.scss
@@ -27,7 +27,7 @@
   padding: 0;
   left: 0;
   right: 0;
-  top: 32px;
+  top: $search-bar-height;
   border-bottom-left-radius: $theme-corner-radius-search;
   border-bottom-right-radius: $theme-corner-radius-search;
 
