--- a/src/app/search/search-filter.scss
+++ b/src/app/search/search-filter.scss
@@ -13,7 +13,7 @@
   background: #313233;
   padding-left: 5px;
   padding-right: 5px;
-  height: 32px;
+  height: $search-bar-height;
   border-radius: $theme-corner-radius-search;
   min-width: 350px;
   box-sizing: border-box;
