--- a/src/app/shell/Header.m.scss
+++ b/src/app/shell/Header.m.scss
@@ -21,11 +21,12 @@ $header-height: 44px;
 .header {
   width: 100%;
   box-sizing: border-box;
-  padding-left: env(safe-area-inset-left, 2px);
-  padding-right: env(safe-area-inset-right);
-  padding-top: env(safe-area-inset-top);
-  height: $header-height;
-  height: calc(#{$header-height} + env(safe-area-inset-top));
+  padding-left: env(titlebar-area-x, env(safe-area-inset-left, 2px));
+  padding-right: calc(
+    100% - env(titlebar-area-width, 100%) - env(titlebar-area-x, 0) + env(safe-area-inset-right)
+  );
+  padding-top: env(titlebar-area-y, env(safe-area-inset-top));
+  height: calc(env(titlebar-area-height, #{$header-height}) + env(safe-area-inset-top));
   display: flex;
   flex-direction: row;
   align-items: center;
@@ -33,6 +34,7 @@ $header-height: 44px;
   background-position: center top;
   background-repeat: no-repeat;
   background-size: 100vw 100vh;
+  -webkit-app-region: drag;
 
   @include phone-portrait {
     background: #000;
@@ -40,6 +42,7 @@ $header-height: 44px;
 
   button,
   a {
+    -webkit-app-region: no-drag;
     > :global(.app-icon) {
       font-size: 1.33em;
 
@@ -89,6 +92,7 @@ $header-height: 44px;
 }
 
 .headerRight {
+  -webkit-app-region: no-drag;
   cursor: default;
   display: flex;
   flex: 1;
