Remove buttons from refresh button error tooltip
And fix width on mobile.

Fixes #9453

--- a/src/app/shell/RefreshButton.m.scss
+++ b/src/app/shell/RefreshButton.m.scss
@@ -38,6 +38,10 @@
   @include tooltip-ribbon-color($red);
 
   max-width: 800px;
+
+  @include phone-portrait {
+    max-width: 95%;
+  }
 }
 
 .errorDetails {
