--- a/src/app/_theme.scss
+++ b/src/app/_theme.scss
@@ -11,6 +11,7 @@
   // Text
   --theme-text: #fff;
   --theme-text-invert: #000;
+  --theme-text-secondary: #aaa;
 
   // Buttons
   --theme-button-bg: rgba(255, 255, 255, 0.2);
