--- a/src/app/item-popup/ItemSocketsGeneral.m.scss
+++ b/src/app/item-popup/ItemSocketsGeneral.m.scss
@@ -1,7 +1,7 @@
 @use '../variables' as *;
 
 .armorIntrinsicDescription {
-  color: #aaa;
+  color: var(--theme-text-secondary);
   white-space: pre-line;
   h3 {
     color: var(--theme-text);
