--- a/src/app/loadout/plug-drawer/SelectablePlug.m.scss
+++ b/src/app/loadout/plug-drawer/SelectablePlug.m.scss
@@ -1,22 +1,20 @@
 @use '../../variables' as *;
 
 .plug {
-  > * {
-    margin-right: 8px;
-  }
-
+  composes: flexColumn from '../../dim-ui/common.m.scss';
   border: 1px solid #666;
   cursor: pointer;
   padding: 8px;
   display: flex;
   flex-direction: row;
+  gap: 8px;
   height: 100%;
   box-sizing: border-box;
   &:hover {
     background-color: rgba(255, 255, 255, 0.1);
   }
   &:focus {
-    outline: 1px solid var(--theme-accent-secondary);
+    outline: 1px solid var(--theme-accent);
   }
 }
 
@@ -24,12 +22,11 @@
   flex: 1;
   display: flex;
   flex-direction: column;
+  gap: 4px;
 }
 
 .plugTitle {
   font-weight: bold;
-  font-size: 13px;
-  margin-bottom: 4px;
 }
 
 .unselectable {
@@ -45,12 +42,7 @@
 }
 
 .requirement {
-  margin-top: 8px;
   font-style: italic;
-}
-
-.partialDescription {
-  &:not(:last-child) {
-    margin-bottom: 4px;
-  }
+  color: var(--theme-text-secondary);
+  font-size: 11px;
 }
