--- a/src/app/loadout/plug-drawer/PlugSection.m.scss
+++ b/src/app/loadout/plug-drawer/PlugSection.m.scss
@@ -1,12 +1,3 @@
-.header {
-  font-weight: 600;
-  font-size: 14px;
-  text-transform: uppercase;
-  margin-bottom: 6px;
-}
-
-.items {
-  display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
-  gap: 4px;
+.section {
+  --tile-grid-width: 300px;
 }
