--- a/src/app/loadout-builder/LoadoutBucketDropTarget.m.scss
+++ b/src/app/loadout-builder/LoadoutBucketDropTarget.m.scss
@@ -1,6 +1,6 @@
 .canDrop {
-  background-color: black;
-  .over {
-    background-color: rgba(128, 128, 128, 0.2);
+  outline: 1px solid #666;
+  &.over {
+    outline: 1px solid var(--theme-accent-primary);
   }
 }
