Clean up and redesign loadout optimizer styles

--- a/src/app/loadout-builder/generated-sets/SetStats.m.scss
+++ b/src/app/loadout-builder/generated-sets/SetStats.m.scss
@@ -1,25 +1,30 @@
 @use '../../variables' as *;
 
 .container {
+  color: #ddd;
   font-size: 14px;
-  flex-wrap: wrap;
+  display: flex;
+  flex-flow: row wrap;
+  gap: 4px 8px;
+  align-items: center;
 }
 
 .statIcon {
   vertical-align: middle;
   height: 16px;
   width: 16px;
+  font-size: 16px;
+  margin-right: 1px;
 }
 
 .light {
   color: $gold;
-  margin-right: 14px;
   white-space: nowrap;
 
   :global(.app-icon) {
-    font-size: 10px;
-    vertical-align: -0.125em;
-    margin-right: 0;
+    vertical-align: 4px;
+    font-size: 8px;
+    margin-right: 2px;
   }
 }
 
@@ -28,21 +33,17 @@
 }
 
 .tierLightContainer {
-  margin-bottom: 5px;
   align-items: center;
   display: flex;
+  margin-right: 0.5em;
 
   .nonActiveStat {
-    margin-right: 5px;
+    margin-left: 0.25em;
   }
 }
 
 .tier {
   font-weight: bold;
-}
-
-.tierLightSegment {
-  margin-right: 5px;
 }
 
 .existingLoadout {
@@ -55,31 +56,13 @@
   font-weight: bold;
 }
 
-.statSegmentContainer {
-  display: flex;
-  flex-flow: row wrap;
-
-  @include phone-portrait {
-    justify-content: space-around;
-  }
-
-  // Prevents odd number of columns messing up the layout
-  @media (max-width: 1079px) {
-    max-width: 500px;
-  }
-}
-
 .statSegment {
   display: flex;
   flex-direction: row;
   align-items: center;
   justify-content: flex-start;
   white-space: nowrap;
-  min-width: calc(var(--item-size) + ((0.59 * var(--item-size)) * 2) + 10px);
-
-  @include phone-portrait {
-    min-width: 120px;
-  }
+  min-width: 48px;
 }
 
 .halfTierValue {
